<resources>
    <string name="app_name">FlashPig</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- Strings used for Flashcard -->
    <string name="pig_img">Pig</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="done">You´re done for today!</string>
    <string name="home">Home</string>
    <string name="play_again">Play again</string>
    <string name="card_nr">Card nr.</string>
    <string name="quit">Are you sure that you want to quit?</string>
    <string name="dont_show">Don´t show this again</string>
    <string name="NA">-</string>

    <!-- Strings used for CardCreate -->
    <string name="finish">Finish</string>
    <string name="newcard">New card</string>
    <string name="takepic">Take a pic</string>
    <string name="choosepicfromgallery">Choose from gallery</string>
    <string name="save">Save</string>

    <!-- Strings used for DeckCreate -->
    <string name="enterdeckname">Enter deck name</string>
    <string name="create">Create</string>
    <string name="createflashcarddeck">Create flashcard deck</string>
    <string name="goBack">If you go back your deck will be deleted oink! Is that ok?</string>

    <!--String used for editDeck-->
    <string name="edit_deck">Edit Deck</string>
    <string name="flashcard_nr">Flashcard nr</string>
    <string name="Deck_name">Change Deck Name</string>
    <string name="save_deck">Save Deck</string>
    <string name="amount_cards">Amount Cards</string>
    <string name="add_new_card">add new card</string>
    <string name="front_side_image">Front side image</string>
    <string name="back_side_image">Back side image</string>
    <string name="front_to_back">To Backside</string>
    <string name="back_to_front">To Frontside</string>
    <string name="edit_spinner_item">Edit</string>
    <string name="share_spinner_itemr">Share</string>
    <string name="remove_spinner_item">Remove</string>
    <string name="choose_deck">Choose Deck</string>
    <string name="delete_card">Are you sure you want to delete this card?</string>
    <string name="delete_deck">Are you sure you want to delete this deck?</string>

    <!-- Strings used for Memory -->
    <string name="Memory">Memory</string>

    <!-- Strings used for Pair-up -->
    <string name="Pair_up">Pair up</string>



</resources>