<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.CreateDeckFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/goBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#81DCD7D7"
        android:visibility="visible"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="224dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/goBackCardView"
            android:layout_width="250dp"
            android:layout_height="145dp"
            android:visibility="invisible"
            app:cardCornerRadius="5dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/dont_show"
                android:textColor="#8A8787"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:text="@string/goBack"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:id="@+id/noBtn1"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|left"
                android:background="@drawable/no_button"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="No!"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/yesBtn1"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/yes_button"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="Yes"
                android:textColor="#FFFFFF" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/radius_corner"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_button" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="384dp"
        android:layout_height="132dp"
        android:layout_marginTop="204dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dcTextInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2"
        app:srcCompat="@drawable/pig" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dcTextInputLayout"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="154dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dcTextinput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter name oink!" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dcButton"
        android:layout_width="156dp"
        android:layout_height="55dp"
        android:layout_marginTop="151dp"
        android:background="@color/colorAccentorange"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_background"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/dcTextView"
        android:layout_width="207dp"
        android:layout_height="43dp"
        android:layout_marginTop="85dp"
        android:text="@string/enterdeckname"
        android:textColor="@color/design_default_color_on_secondary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar2" />

</androidx.constraintlayout.widget.ConstraintLayout>