<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".View.DashboardFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/editCardToolbar2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:background="@drawable/header"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/card_background"
        app:layout_constraintBottom_toBottomOf="@+id/createCardButton11"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/createCardButton11">

        <Spinner
            android:id="@+id/chooseDeckSpinner"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:descendantFocusability="blocksDescendants"
            android:dropDownWidth="260dp"
            android:orientation="vertical"
            android:overScrollMode="ifContentScrolls"
            android:scrollbars="vertical"
            android:spinnerMode="dropdown"
            tools:layout_editor_absoluteX="40dp"
            tools:listitem="@layout/editdeck_spinner_item" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/createCardButton11"
        android:layout_width="43dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/add_btn"
        android:contentDescription="@string/add_new_card"
        android:tint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardToolbar2" />

    <ImageView
        android:id="@+id/pigImageView2"
        android:layout_width="154dp"
        android:layout_height="59dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/pig_img"
        android:rotationX="180"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/editCardToolbar2"
        app:srcCompat="@drawable/pig" />

    <ImageButton
        android:id="@+id/flashcard1"
        android:layout_width="156dp"
        android:layout_height="210dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/flashcardd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardToolbar2" />

    <ImageButton
        android:id="@+id/pairup1"
        android:layout_width="156dp"
        android:layout_height="210dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/pairs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardToolbar2" />

    <ImageButton
        android:id="@+id/memory1"
        android:layout_width="156dp"
        android:layout_height="210dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/memory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardToolbar2" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="156dp"
        android:layout_height="210dp"
        android:layout_marginTop="320dp"
        android:src="@drawable/progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editCardToolbar2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/app_name"
        android:textColor="@color/background"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/pigImageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ndeckstext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:drawablePadding="5dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:textColor="@color/design_default_color_background"
        android:textSize="18sp"
        app:drawableStartCompat="@drawable/ic_baseline_filter_none_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/editDeckBtn"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:background="#00FF0000"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/edit_deck"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ndeckstext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ndeckstext" />

</androidx.constraintlayout.widget.ConstraintLayout>