<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Flashcard.StartFragment">

    <TextView
        android:id="@+id/card_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="154dp"
        android:layout_marginRight="154dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:text="Card nr.1"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="10dp"
        android:layout_marginStart="182dp"
        android:layout_marginLeft="182dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="182dp"
        android:layout_marginRight="182dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/front_card"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/front_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="Front txt" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/back_card"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_marginStart="55dp"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="55dp"
        android:layout_marginRight="55dp"
        android:clickable="false"
        android:visibility="invisible"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar">

        <TextView
            android:id="@+id/back_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_slab"
            android:gravity="center"
            android:text="Back txt" />
    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/pig_img"
        android:layout_width="137dp"
        android:layout_height="50dp"
        android:layout_marginStart="137dp"
        android:layout_marginLeft="137dp"
        android:layout_marginEnd="137dp"
        android:layout_marginRight="137dp"
        android:src="@drawable/pig"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/front_card" />

    <Button
        android:id="@+id/btn_easy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/easy"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/easy"
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/btn_medium"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pig_img" />

    <Button
        android:id="@+id/btn_hard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/hard"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/hard"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_medium"
        app:layout_constraintTop_toBottomOf="@+id/pig_img" />

    <Button
        android:id="@+id/btn_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:background="@color/medium"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/btn_hard"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_easy"
        app:layout_constraintTop_toBottomOf="@+id/pig_img" />

</androidx.constraintlayout.widget.ConstraintLayout>